Bug 1691892 - Reject stale active browsing context setting attempts by action id in content processes. r=nika

Differential Revision: https://phabricator.services.mozilla.com/D107192