docshell/base/BrowsingContextGroup.cpp
@@ -159,7 +159,8 @@ void BrowsingContextGroup::Subscribe(ContentParent* aProcess) {
     }
 
     if (focused || active) {
-      Unused << aProcess->SendSetupFocusedAndActive(focused, active);
+      Unused << aProcess->SendSetupFocusedAndActive(
+          focused, active, fm->GetActionIdForActiveBrowsingContextInChrome());
     }
   }
 }
